--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 		<div id="header">
 			<div id="Menu">
-				<a href="home.html"> HOME</a>
+				<a href="index.html"> HOME</a>
 				<a href="about.html"> |ABOUT </a>
 				<a href="image_galery.html"> |IMAGE_GALERY </a>
 				<a href="contact.html"> |CONTACT </a>
