--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 			<div id="Menu">
 				<a href="index.html"> HOME</a>
 				<a href="about.html"> |ABOUT </a>
-				<a href="image_galery.html"> |IMAGE_GALERY </a>
+				<a href="imagegalery.html"> |IMAGE_GALERY </a>
 				<a href="contact.html"> |CONTACT </a>
 			</div>
 		</div>
 		<div id="left">
 		<h1> Hello! My name is Monika. Welcome to my personal Website! </h1>
-		<img src="https://scontent-ams3-1.xx.fbcdn.net/hphotos-xtp1/v/t1.0-9/12033062_1144952352185750_4319207931586587113_n.jpg?oh=3c6d5bf1f2f9fc345286f0c03993a5d6&oe=572ECA35" width="500px" height="500px">
+		<img src="https://scontent-ams3-1.xx.fbcdn.net/hphotos-xtp1/v/t1.0-9/12033062_1144952352185750_4319207931586587113_n.jpg?oh=3c6d5bf1f2f9fc345286f0c03993a5d6&oe=572ECA35" width="300px" height="300px">
 		</div>
 		<div id="right">
 		<table>
-			<th colspan="2" Important dates </th>
+			<th colspan="2"> Important dates </th>
+			<ul>
 			<li> 1994 January 13 - Birthday </li>
 			<li> 2000 September 1 - First day at school </li>
 			<li> 2001 September 1 - Fisrt day in Music school</li>
 			<li> 2012 June 5 - School Graduation </li>
-			<li> 2012 September 1 - First day in LCC University </li>
+			<li> 2012 September 1 - First day in LCC University </li> </ul>
 		</table>
 		</div>
 		<div id="footer">
