--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
 		<div id="header">
 			<div id="Menu">
-				<a href="home.html"> HOME</a>
+				<a href="index.html"> HOME</a>
 				<a href="about.html"> |ABOUT </a>
 				<a href="imagegalery.html"> |IMAGE GALERY </a>
 				<a href="contact.html"> |CONTACT </a>
@@ -53,7 +53,8 @@
 				height: 100px;
 				width: 500px;
 				border: 1px solid white;
-			}			
+			}	
+		</style>
 </body>
 </center>
 </html>
