--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head> 
 		<title> Monika Brazdeikyte </title>
 	</head>
-<center>	
+	
 <body>
 		<div id="header">
 			<div id="Menu">
@@ -48,7 +48,10 @@
 				width: 500px;
 				border: 1px solid white;
 			}
+			.center{
+			margin: auto;
+			}
 		</style>
 </body>
-</center>			
+		
 </html>
