--- a/imagegalery.html
+++ b/imagegalery.html
@@ -3,7 +3,7 @@
 	<head> 
 		<title> Monika Brazdeikyte </title>
 	</head>
-<center>	
+
 <body>
 		<div id="header">
 			<div id="Menu">
@@ -54,8 +54,11 @@
 				height: 100px;
 				width: 500px;
 				border: 1px solid white;
-			}	
+			}
+			.center{
+			margin: auto;
+			}
 		</style>			
 </body>
-</center>
+
 </html>
