--- a/imagegalery.html
+++ b/imagegalery.html
@@ -3,7 +3,7 @@
 	<head> 
 		<title> Monika Brazdeikyte </title>
 	</head>
-
+<center>
 <body>
 		<div id="header">
 			<div id="Menu">
@@ -55,10 +55,8 @@
 				width: 500px;
 				border: 1px solid white;
 			}
-			.center{
-			margin: auto;
-			}
+			
 		</style>			
 </body>
-
+</center>
 </html>
