--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head> 
 		<title> Monika Brazdeikyte </title>
 	</head>
-	
+<center>	
 <body>
 		<div id="header">
 			<div id="Menu">
@@ -60,10 +60,8 @@
 				border: 1px solid white;
 				float: center;
 			}
-			.center{
-			margin: auto;
-			}
+		
 		</style>			
 </body>
-
+</center>
 </html>
