--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		</div>
 		<div id="right">
 		<table>
-			<th colspan="2"> Important dates </th>
+			<h3> Important dates </h3>
+			<th></th>
 			<ul>
 			<li> 1994 January 13 - Birthday </li>
 			<li> 2000 September 1 - First day at school </li>
