--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 		</div>
 		<div id="right">
 		<table>
-			<h3> Important dates </h3>
-			<th></th>
+			<tr>
+			<th> Important Dates</th>
+			<th> Event </th>
+			</tr>
 			<ul>
-			<li> 1994 January 13 - Birthday </li>
-			<li> 2000 September 1 - First day at school </li>
-			<li> 2001 September 1 - Fisrt day in Music school</li>
-			<li> 2012 June 5 - School Graduation </li>
-			<li> 2012 September 1 - First day in LCC University </li> </ul>
+			<td><li> 1994 January 13 - Birthday </li></td>
+			<td><li> 2000 September 1 - First day at school </li></td>
+			<td><li> 2001 September 1 - Fisrt day in Music school</li></td>
+			<td><li> 2012 June 5 - School Graduation </li></td>
+			<td><li> 2012 September 1 - First day in LCC University </li></td> </ul>
 		</table>
 		</div>
 		<div id="footer">
