--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 			<th> Event </th>
 			</tr>
 			<ul>
-			<td><li> 1994 January 13 - Birthday </li></td>
-			<td><li> 2000 September 1 - First day at school </li></td>
+			<tr>
+				<td> 1994 January 13</td>
+				<td>Birthday</td>
+			</tr>
+			<td> 2000 September 1</td> 
+			<td> First day at school</td>
 			<td><li> 2001 September 1 - Fisrt day in Music school</li></td>
 			<td><li> 2012 June 5 - School Graduation </li></td>
 			<td><li> 2012 September 1 - First day in LCC University </li></td> </ul>
