--- a/index.html
+++ b/index.html
@@ -25,14 +25,26 @@
 			</tr>
 			<ul>
 			<tr>
-				<td> 1994 January 13</td>
+				<td>1994 January 13</td>
 				<td>Birthday</td>
 			</tr>
-			<td> 2000 September 1</td> 
-			<td> First day at school</td>
-			<td><li> 2001 September 1 - Fisrt day in Music school</li></td>
-			<td><li> 2012 June 5 - School Graduation </li></td>
-			<td><li> 2012 September 1 - First day in LCC University </li></td> </ul>
+			<tr>
+				<td>2000 September 1</td> 
+				<td>First day at school</td>
+			</tr>
+			<tr>
+				<td>2001 September 1</td>
+				<td>Fisrt day in Music school</td>
+			</tr>
+			<tr>
+				<td>2012 June 5</td>
+				<td>School Graduation</td>
+			</tr>
+			<tr>
+				<td> 2012 September 1</td>
+				<td>First day in LCC University</td> 
+			</tr>
+			</ul>
 		</table>
 		</div>
 		<div id="footer">
